# densemesh

./: .gitmodules  CMakeLists.txt  README copy.md
src/: camera.cpp  camera.hpp  test.cpp
